--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <h4>Devis personalisés et sur-mesure, envoyez-moi vos demandes via ce formulaire, ou par téléphone</h4>
 
 
-        <!-- <div class="form-container">
+        <div class="form-container">
             <form id="reused_form">
                 <div>
                     <input id="name" type="text" name="name" placeholder="Nom" required class="validate">
@@ -402,25 +402,9 @@
             <div id="success_message" style="width:100%; height:100%; display:none; ">
                 <h4>Message envoyé !</h4>
             </div>
-        </div> -->
+        </div>
 
-        <form method="post" action="send-mail.php" class="contact-form" id="form">
-            <div class="row">
-                <div class="col-md-12">
-                    <input type="text" name="name" placeholder="Insérez votre nom" class="required">
-                </div>
-                <div class="col-md-12">
-                    <input type="email" name="email" placeholder="Insérez votre adresse email" class="contact-form-email required">
-                </div>
-                <div class="col-md-12">
-                    <input type="text" name="subject" placeholder="Votre sujet" class="contact-form-subject required">
-                </div>
-            </div>
-            <textarea name="message" placeholder="Insérez votre message" class="required" rows="7"></textarea>
-            <div class="response-message"></div>
-            <button class="border-button border-bt-red" type="submit" id="submit" name="submit">Envoyer Message</button>
-        </form>
-
+       
         <!-- ********************************************************************* NOS PARTENEAIRES *********************************************************** -->
 
         <h3>nos partenaires</h3>
